Validaciones de Usuario agregado para bd y captura